aks/deployment/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-dev-namespace

---
apiVersion: v1
kind: Namespace
metadata:
  name: api-dev-namespace
