aks/deployment/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jump
  namespace: helm-ingress-control
spec:
  containers:
  - name: busybox
    image: progrium/busybox
    command:
      - sleep
      - "3600"
