aks/deployment/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-svc-deployment
  namespace: web-dev-namespace
  labels:
    app: tripviewer-svc-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tripviewer-svc-deployment
  template:
    metadata:
      labels:
        app: tripviewer-svc-deployment
    spec:
      containers:
        - name: tripviewer
          image: registryayb1330.azurecr.io/openhacks-vlad/tripviewer:v1
          ports:
            - containerPort: 80
