aks/deployment/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-svc-deployment
  namespace: api-dev-namespace
  labels:
    app: poi-svc-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: poi-svc-deployment
  template:
    metadata:
      labels:
        app: poi-svc-deployment
    spec:
      containers:
        - name: poi
          image: registryayb1330.azurecr.io/openhacks-vlad/poi:v1
          ports:
            - containerPort: 80

          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv"
            nodePublishSecretRef:
              name: akv-creds
---
apiVersion: v1
kind: Service
metadata:
  name: poi-svc-deployment
  namespace: api-dev-namespace
  labels:
    app: poi-svc-deployment
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: poi-svc-deployment
