aks/deployment/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-svc-deployment
  namespace: api-dev-namespace
  labels:
    app: trips-svc-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: trips-svc-deployment
  template:
    metadata:
      labels:
        app: trips-svc-deployment
    spec:
      containers:
        - name: trips
          image: registryayb1330.azurecr.io/openhacks-vlad/trips:v1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv"
            nodePublishSecretRef:
              name: akv-creds
---
apiVersion: v1
kind: Service
metadata:
  name: trips-svc-deployment
  namespace: api-dev-namespace
  labels:
    app: trips-svc-deployment
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: trips-svc-deployment
