aks/deployment/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-svc-deployment
  namespace: api-dev-namespace
  labels:
    app: user-java-svc
spec:
  replicas: 5
  selector:
    matchLabels:
      app: user-java-svc
  template:
    metadata:
      labels:
        app: user-java-svc
    spec:
      containers:
        - name: user-java
          image: registryayb1330.azurecr.io/openhacks-vlad/user-java:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-svc
  namespace: api-dev-namespace
  labels:
    app: user-java-svc
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: user-java-svc
