aks/deployment/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-svc-deployment
  labels:
    app: userprofile
spec:
  replicas: 5
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
        - name: userprofile
          image: registryayb1330.azurecr.io/openhacks-vlad/userprofile:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-svc
  labels:
    app: userprofile
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: userprofile
