aks/deployment/web-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-svc
  namespace: web-dev-namespace
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: tripviewer-svc-deployment
